2008-03-20  Chrisian Neumair  <cneumair@gnome-de.org>

	* src/*.[ch]:
	* libnautilus-private/*.[ch]:

	Added:
	* src/nautilus-window-slot.[ch]:
	* src/nautilus-navigation-window-slot.[ch]:
	* libnautilus-private/nautilus-window-slot-info.[ch]:

	Add initial implementation of view slots, port all the
	existing view switching code to it.

	Each slot corresponds to a location that can be used to
	display view widgets.

	A slot contains all view-specific data, and connects
	windows, sidebar panels and views.

	For now, all Nautilus windows just have one slot. The
	idea is that navigation windows will have a tabbed interfaces,
	and each slot will be corresponde to a separate tab.

=== multiview branch starts here ===

2008-03-20  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-program-choosing.c:
	Use GDesktopAppInfos for launching desktop files. (#342084)
	Patch from Cosimo Cecchi.
	
        * src/file-manager/fm-directory-view.c:
        (paste_clipboard_data):
	Fix leak 

2008-03-19  Frederic Crozat  <fcrozat@mandriva.com>

	* libnautilus-private/nautilus-link.c:
	Only strip icon name when it ends with a know
	icon extension.

2008-03-19  Alexander Larsson  <alexl@redhat.com>

	* MAINTAINERS:
	Add Christian Neumair as new maintainer

2008-03-19  Sebastian Dröge  <slomo@circular-chaos.org>

	* libnautilus-private/nautilus-search-engine-tracker.c:
	(nautilus_search_engine_tracker_new): Check that tracker is
	actually running before using it (#386512).
	Patch by Josselin Mouette.

2008-03-19  Sebastian Dröge  <slomo@circular-chaos.org>

	* src/file-manager/fm-directory-view.c:
	(action_show_hidden_files_callback): Show backup files too if the
	option for it is set. Showing hidden files and backup files is
	handled exactly the same in nautilus nowadays (#327361).
	Patch by Stephen Cook.

2008-03-19  Sebastian Dröge  <slomo@circular-chaos.org>

	* src/file-manager/fm-directory-view.c: (file_should_show_foreach):